Added more test data sets

--- a/sentence-similarity-biosentvec/Project_244.ipynb
+++ b/sentence-similarity-biosentvec/Project_244.ipynb
@@ -389,19 +389,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. BIOSSES Test Dataset "
+    "## 6. Test Dataset "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. BioSentVec"
+    "### Initialization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import lru_cache\n",
+    "\n",
+    "# Levenshtein distance\n",
+    "def lev_dist(a, b):    \n",
+    "    \n",
+    "    @lru_cache(None)  # for memorization\n",
+    "    def min_dist(s1, s2):\n",
+    "\n",
+    "        if s1 == len(a) or s2 == len(b):\n",
+    "            return len(a) - s1 + len(b) - s2\n",
+    "\n",
+    "        # no change required\n",
+    "        if a[s1] == b[s2]:\n",
+    "            return min_dist(s1 + 1, s2 + 1)\n",
+    "\n",
+    "        return 1 + min(\n",
+    "            min_dist(s1, s2 + 1),      # insert character\n",
+    "            min_dist(s1 + 1, s2),      # delete character\n",
+    "            min_dist(s1 + 1, s2 + 1),  # replace character\n",
+    "        )\n",
+    "\n",
+    "    return min_dist(0, 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. BIOSSES Test Dataset "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. BioSentVec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -444,12 +488,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Levenshtein Distance"
+    "#### 2. Levenshtein Distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -461,28 +505,6 @@
     }
    ],
    "source": [
-    "from functools import lru_cache\n",
-    "\n",
-    "def lev_dist(a, b):\n",
-    "    \n",
-    "    @lru_cache(None)  # for memorization\n",
-    "    def min_dist(s1, s2):\n",
-    "\n",
-    "        if s1 == len(a) or s2 == len(b):\n",
-    "            return len(a) - s1 + len(b) - s2\n",
-    "\n",
-    "        # no change required\n",
-    "        if a[s1] == b[s2]:\n",
-    "            return min_dist(s1 + 1, s2 + 1)\n",
-    "\n",
-    "        return 1 + min(\n",
-    "            min_dist(s1, s2 + 1),      # insert character\n",
-    "            min_dist(s1 + 1, s2),      # delete character\n",
-    "            min_dist(s1 + 1, s2 + 1),  # replace character\n",
-    "        )\n",
-    "\n",
-    "    return min_dist(0, 0)\n",
-    "\n",
     "import docx\n",
     "import numpy as np\n",
     "\n",
@@ -504,6 +526,7 @@
     "for sentMap in data:\n",
     "    sentence_vector1 = preprocess_sentence(sentMap['Sentence 1'])\n",
     "    sentence_vector2 = preprocess_sentence(sentMap['Sentence 2'])\n",
+    "    # Levenshtein distance\n",
     "    lev_sim = lev_dist(sentence_vector1, sentence_vector2)\n",
     "    lev_dist_similarity_list.append(lev_sim)\n",
     "min_distance = np.min(lev_dist_similarity_list)\n",
@@ -514,6 +537,197 @@
     "lev_similarity_score = np.mean(dist_list)\n",
     "print('Levenshtein similarity score:', lev_similarity_score)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. MayoSRS Test Dataset "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. BioSentVec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BioSentVec similarity score: 0.2514136122977909\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/naveentulseela/Library/Python/3.8/lib/python/site-packages/scipy/spatial/distance.py:630: RuntimeWarning: invalid value encountered in float_scalars\n",
+      "  dist = 1.0 - uv / np.sqrt(uu * vv)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "file = open('/Users/naveentulseela/Desktop/UIUC/test_data/MayoSRS.csv')\n",
+    "csvreader = csv.reader(file)\n",
+    "\n",
+    "cosine_similarity_list = []\n",
+    "\n",
+    "for row in csvreader:\n",
+    "    sentence_vector1 = model.embed_sentence(preprocess_sentence(row[3]))\n",
+    "    sentence_vector2 = model.embed_sentence(preprocess_sentence(row[4]))\n",
+    "    cosine_sim = 1 - distance.cosine(sentence_vector1, sentence_vector2)\n",
+    "    cosine_similarity_list.append(cosine_sim)\n",
+    "file.close()\n",
+    "cosine_similarity_score = np.mean(cosine_similarity_list)\n",
+    "print('BioSentVec similarity score:', cosine_similarity_score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Levenshtein Distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Levenshtein similarity score: 0.10480677938548977\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "file = open('/Users/naveentulseela/Desktop/UIUC/test_data/MayoSRS.csv')\n",
+    "csvreader = csv.reader(file)\n",
+    "\n",
+    "lev_dist_similarity_list = []\n",
+    "for row in csvreader:\n",
+    "    sentence_vector1 = preprocess_sentence(row[3])\n",
+    "    sentence_vector2 = preprocess_sentence(row[4])\n",
+    "    lev_sim = lev_dist(sentence_vector1, sentence_vector2)\n",
+    "    lev_dist_similarity_list.append(lev_sim)\n",
+    "min_distance = np.min(lev_dist_similarity_list)\n",
+    "file.close()\n",
+    "\n",
+    "dist_list = []\n",
+    "for dist in lev_dist_similarity_list:\n",
+    "    dist_list.append(min_distance / dist)\n",
+    "lev_similarity_score = np.mean(dist_list)\n",
+    "print('Levenshtein similarity score:', lev_similarity_score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. UMNSRS_similarity Test Dataset "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. BioSentVec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BioSentVec similarity score: 0.23443180937339755\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "file = open('/Users/naveentulseela/Desktop/UIUC/test_data/UMNSRS_similarity.csv')\n",
+    "csvreader = csv.reader(file)\n",
+    "cosine_similarity_list = []\n",
+    "\n",
+    "for row in csvreader:\n",
+    "    sentence_vector1 = model.embed_sentence(preprocess_sentence(row[2]))\n",
+    "    sentence_vector2 = model.embed_sentence(preprocess_sentence(row[3]))\n",
+    "    cosine_sim = 1 - distance.cosine(sentence_vector1, sentence_vector2)\n",
+    "    cosine_similarity_list.append(cosine_sim)\n",
+    "file.close()\n",
+    "cosine_similarity_score = np.mean(cosine_similarity_list)\n",
+    "print('BioSentVec similarity score:', cosine_similarity_score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Levenshtein Distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Levenshtein similarity score: 0.12853671720147514\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "file = open('/Users/naveentulseela/Desktop/UIUC/test_data/UMNSRS_similarity.csv')\n",
+    "csvreader = csv.reader(file)\n",
+    "\n",
+    "lev_dist_similarity_list = []\n",
+    "for row in csvreader:\n",
+    "    sentence_vector1 = preprocess_sentence(row[2])\n",
+    "    sentence_vector2 = preprocess_sentence(row[3])\n",
+    "    lev_sim = lev_dist(sentence_vector1, sentence_vector2)\n",
+    "    if lev_sim != 0:\n",
+    "        lev_dist_similarity_list.append(lev_sim)\n",
+    "min_distance = np.min(lev_dist_similarity_list)\n",
+    "\n",
+    "dist_list = []\n",
+    "for dist in lev_dist_similarity_list:\n",
+    "    dist_list.append(min_distance / dist)\n",
+    "lev_similarity_score = np.mean(dist_list)\n",
+    "file.close()\n",
+    "print('Levenshtein similarity score:', lev_similarity_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
