Added README file and updated paths

--- a/sentence-similarity-biosentvec/Project_244.ipynb
+++ b/sentence-similarity-biosentvec/Project_244.ipynb
@@ -62,7 +62,7 @@
     }
    ],
    "source": [
-    "model_path = '/Users/naveentulseela/Downloads/BioSentVec_PubMed_MIMICIII-bigram_d700.bin'\n",
+    "model_path = '../test_data/BioSentVec_PubMed_MIMICIII-bigram_d700.bin'\n",
     "model = sent2vec.Sent2vecModel()\n",
     "try:\n",
     "    model.load_model(model_path)\n",
@@ -460,7 +460,7 @@
     "import docx\n",
     "import numpy as np\n",
     "\n",
-    "doc = docx.Document('/Users/naveentulseela/Desktop/UIUC/test_data/BIOSSES-Dataset/Annotation-Pairs.docx')\n",
+    "doc = docx.Document('../test_data/BIOSSES-Dataset/Annotation-Pairs.docx')\n",
     "tables = doc.tables\n",
     "data = []\n",
     "\n",
@@ -508,7 +508,7 @@
     "import docx\n",
     "import numpy as np\n",
     "\n",
-    "doc = docx.Document('/Users/naveentulseela/Desktop/UIUC/test_data/BIOSSES-Dataset/Annotation-Pairs.docx')\n",
+    "doc = docx.Document('../test_data/BIOSSES-Dataset/Annotation-Pairs.docx')\n",
     "tables = doc.tables\n",
     "data = []\n",
     "\n",
@@ -576,7 +576,7 @@
    "source": [
     "import csv\n",
     "\n",
-    "file = open('/Users/naveentulseela/Desktop/UIUC/test_data/MayoSRS.csv')\n",
+    "file = open('../test_data/MayoSRS.csv')\n",
     "csvreader = csv.reader(file)\n",
     "\n",
     "cosine_similarity_list = []\n",
@@ -616,7 +616,7 @@
    "source": [
     "import csv\n",
     "\n",
-    "file = open('/Users/naveentulseela/Desktop/UIUC/test_data/MayoSRS.csv')\n",
+    "file = open('../test_data/MayoSRS.csv')\n",
     "csvreader = csv.reader(file)\n",
     "\n",
     "lev_dist_similarity_list = []\n",
@@ -665,7 +665,7 @@
    "source": [
     "import csv\n",
     "\n",
-    "file = open('/Users/naveentulseela/Desktop/UIUC/test_data/UMNSRS_similarity.csv')\n",
+    "file = open('../test_data/UMNSRS_similarity.csv')\n",
     "csvreader = csv.reader(file)\n",
     "cosine_similarity_list = []\n",
     "\n",
@@ -702,7 +702,7 @@
    "source": [
     "import csv\n",
     "\n",
-    "file = open('/Users/naveentulseela/Desktop/UIUC/test_data/UMNSRS_similarity.csv')\n",
+    "file = open('../test_data/UMNSRS_similarity.csv')\n",
     "csvreader = csv.reader(file)\n",
     "\n",
     "lev_dist_similarity_list = []\n",
