Adding Universal Sentence Encoder Model

--- a/sentence-similarity-biosentvec/Project_244.ipynb
+++ b/sentence-similarity-biosentvec/Project_244.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +39,25 @@
     "from nltk.corpus import stopwords\n",
     "from string import punctuation\n",
     "from scipy.spatial import distance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Install the necessary python libraries to access the Universal Sentence Encoder Model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from absl import logging\n",
+    "import tensorflow as tf\n",
+    "import tensorflow_hub as hub\n",
+    "import numpy as np"
    ]
   },
   {
@@ -75,12 +94,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Preprocess sentences"
+    "## 3. Load Universal Sentence Encoder model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that this is the standard version of the universal sentence encoder and is only able to process the english language. Other versions offer a broader language variety and are suited for different forms of textual input."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "module_url = \"https://tfhub.dev/google/universal-sentence-encoder/4\"\n",
+    "universal_sentence_encoder = hub.load(module_url)\n",
+    "logging.set_verbosity(logging.ERROR)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Preprocess sentences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +132,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /Users/naveentulseela/nltk_data...\n",
+      "[nltk_data]     C:\\Users\\akhil\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
@@ -118,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +177,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     /Users/naveentulseela/nltk_data...\n",
+      "[nltk_data]     C:\\Users\\akhil\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     }
@@ -149,7 +193,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Retrieve a sentence vector"
+    "## 5. Retrieve a sentence vector"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. BioSentVec"
    ]
   },
   {
@@ -328,7 +379,156 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Compute sentence similarity"
+    "#### 2. Universal Sentence Encoder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once a sentence is preprocessed, we can pass it to the Universal Sentence Encoder model to retrieve a vector representation of the sentence."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[-0.01706054 -0.02982263 -0.06450873 -0.00945025 -0.03946786 -0.077258\n",
+      "  -0.04527489 -0.06925316 -0.00476587  0.05182612  0.08069605 -0.05177524\n",
+      "  -0.04592242 -0.04435806  0.01292375 -0.04330221 -0.08106487 -0.03709086\n",
+      "   0.06627572 -0.03122658  0.01539265  0.07002871  0.02392466 -0.01713471\n",
+      "   0.0310583  -0.03737702  0.027232   -0.02219061 -0.0124025   0.07148183\n",
+      "   0.05177425  0.08108076 -0.00427653 -0.07375586 -0.05576143  0.01741701\n",
+      "  -0.04468859  0.06967676 -0.04987274 -0.05859317  0.03158952 -0.02929872\n",
+      "   0.0215015  -0.02629163  0.04192941 -0.04903167 -0.05458231 -0.04037523\n",
+      "  -0.06134297  0.06647678 -0.04487872 -0.04345295 -0.06080464 -0.04348946\n",
+      "  -0.05720161 -0.0214076  -0.03062622  0.01864022  0.0283277   0.01318153\n",
+      "  -0.05516872 -0.06180546  0.03157061 -0.03427697 -0.06046344 -0.01410388\n",
+      "   0.02567874  0.03303296  0.06351852  0.0652984   0.02503775  0.06748096\n",
+      "   0.00462156  0.04772187  0.0510456   0.02751398 -0.01434254  0.07380927\n",
+      "   0.00462101 -0.05693014  0.07558877  0.07957336  0.06280757  0.01618009\n",
+      "  -0.03963953  0.00983561  0.02604412 -0.02842521  0.02102662  0.01432356\n",
+      "  -0.03796684  0.07071095  0.00805746  0.03495389  0.04285901  0.01219695\n",
+      "  -0.0011974   0.05340707  0.03411036  0.04475879 -0.00368645  0.03083525\n",
+      "   0.06678646 -0.01976889  0.0658456   0.00221735  0.00306581 -0.05956263\n",
+      "   0.0010188   0.06516935 -0.07937347 -0.05739776  0.02673264  0.04284898\n",
+      "  -0.00968548 -0.01743378 -0.0504784   0.01019778  0.05731171 -0.03684001\n",
+      "  -0.06948613  0.05580418  0.00061519  0.02547961  0.03485722 -0.0397641\n",
+      "  -0.05568918  0.03532877 -0.04141847 -0.05073671  0.01485707  0.08105876\n",
+      "   0.04481429 -0.03248807 -0.01669317  0.03493425  0.05778471  0.07077385\n",
+      "   0.03904844  0.02255414  0.06563922  0.04097562 -0.03475442 -0.02385972\n",
+      "   0.02062055  0.02780036 -0.00716556 -0.0795014  -0.05367013  0.02893638\n",
+      "   0.06852588 -0.01245587 -0.02475527 -0.06092625  0.0158423   0.02055498\n",
+      "  -0.06865124 -0.04911914 -0.06675656 -0.0538724  -0.04096954  0.06000466\n",
+      "  -0.05828339 -0.00365399  0.00391731 -0.07709993 -0.07388635  0.05102379\n",
+      "   0.01949502 -0.05813583 -0.00148202 -0.08051783 -0.06785438  0.07001327\n",
+      "   0.06746506 -0.0494054  -0.02439286 -0.03006406 -0.026718    0.03244586\n",
+      "   0.03671165 -0.0165214  -0.04493577  0.04295131  0.06081214  0.02695449\n",
+      "   0.06942286 -0.03379847 -0.03398345 -0.0723663   0.04744759 -0.04726491\n",
+      "  -0.01711409  0.0136638   0.02234694  0.04608665  0.04815384 -0.01104325\n",
+      "   0.02168086 -0.03241917 -0.02221176  0.04879502  0.06040967  0.03091732\n",
+      "  -0.05210437  0.05603475 -0.05194407 -0.05271475 -0.03349389  0.03965942\n",
+      "   0.05305358  0.01849852 -0.00412451 -0.03729869 -0.06587534  0.00751315\n",
+      "   0.06674613  0.02230419 -0.0474311   0.06454217  0.03624735 -0.04641006\n",
+      "   0.04679414  0.04101348 -0.01047366  0.05295023  0.0130115  -0.05019052\n",
+      "  -0.04472562  0.05335503  0.03719546 -0.03793568 -0.00392208  0.04080231\n",
+      "   0.01659797  0.03933737 -0.01563497  0.0525137   0.00568343 -0.01604218\n",
+      "   0.012394   -0.04794568 -0.07756712  0.02057162  0.04740968  0.05463218\n",
+      "  -0.0412036   0.05339271 -0.01242667 -0.07147543  0.05985804  0.03807913\n",
+      "   0.02669032 -0.0642179  -0.00044721  0.03687155 -0.05137171  0.01684663\n",
+      "  -0.05259082 -0.04366008  0.00187017 -0.03099283 -0.04578206  0.07071716\n",
+      "  -0.04065597 -0.02268871 -0.01180075 -0.03539972 -0.06847797 -0.01248511\n",
+      "  -0.05596287 -0.03235714  0.0474134   0.05286312 -0.06056814 -0.03532586\n",
+      "   0.02094376 -0.03061981  0.00730366 -0.05177819 -0.0293935   0.05779368\n",
+      "  -0.02360277 -0.00813117 -0.04635155 -0.02124056 -0.02579599 -0.02335327\n",
+      "   0.01207552  0.04445786  0.07771128  0.0128588   0.00327976 -0.00514602\n",
+      "  -0.03307199 -0.05580048  0.01127325  0.00800992 -0.01970835  0.01266492\n",
+      "  -0.01486481  0.01470091  0.01068866  0.04788509 -0.07398974 -0.05278783\n",
+      "  -0.05216161 -0.04771575  0.01909809  0.01295072  0.02847923 -0.01342636\n",
+      "  -0.06500753 -0.02899458 -0.01669165 -0.07355104 -0.00209347  0.00441023\n",
+      "  -0.05432557 -0.00650779 -0.03600447  0.00272223  0.03259845 -0.02744802\n",
+      "   0.03263266  0.07950383 -0.06786795 -0.01886913 -0.0589062   0.00020725\n",
+      "   0.0345258   0.04133177  0.00845711  0.02091471  0.05939933  0.00790352\n",
+      "  -0.05228874  0.03750809 -0.00970996 -0.0416332   0.05570126 -0.02001455\n",
+      "   0.06244738 -0.04040646  0.01222035  0.04565304 -0.05889083 -0.02573834\n",
+      "   0.00702647  0.00826937 -0.01975815  0.05543774 -0.0150815   0.00152189\n",
+      "  -0.00579688  0.02426102 -0.06849482  0.0065862  -0.00959657  0.04641501\n",
+      "   0.05630873 -0.04543037 -0.0545543   0.02237976  0.03502543  0.03658181\n",
+      "   0.03766841  0.01120555 -0.07801164 -0.02618901  0.02968883  0.02198969\n",
+      "   0.07438018 -0.07290717  0.05835711 -0.04073805 -0.0453577  -0.05361401\n",
+      "   0.02515254 -0.07141205 -0.07736989 -0.07691745  0.04752002 -0.04073824\n",
+      "  -0.00405376  0.04521107  0.07464986 -0.03805187  0.06355393 -0.06085183\n",
+      "  -0.03914654  0.0265358  -0.04585753  0.05467781 -0.07988507  0.07508503\n",
+      "   0.05462148 -0.04141235  0.07145645  0.0308333  -0.00418036 -0.02700487\n",
+      "   0.04760922 -0.01573735 -0.00513888  0.00906907 -0.06655    -0.02171599\n",
+      "   0.01112987  0.02142444  0.05100318  0.04857115  0.06534775 -0.03718774\n",
+      "  -0.06838916 -0.04144597  0.03955498 -0.03096634 -0.02567561 -0.02237871\n",
+      "   0.02383919  0.06929962  0.04766508 -0.07485477  0.05784786  0.00258369\n",
+      "   0.01695319 -0.07251924 -0.04364058  0.06489131  0.03917194 -0.01470128\n",
+      "  -0.04921795 -0.06464823  0.01120196  0.01161872 -0.04710688 -0.05050945\n",
+      "  -0.00403404  0.00268341 -0.00784444  0.04009788  0.05163324 -0.02946849\n",
+      "  -0.00412007 -0.02314316  0.01673633 -0.02574484 -0.02365477  0.04674415\n",
+      "  -0.06809828  0.0223749  -0.03630517 -0.02385872 -0.07183222 -0.02584982\n",
+      "  -0.04323738  0.05943372 -0.05958354  0.06671643  0.02315641  0.00524793\n",
+      "   0.05055672 -0.03955711  0.05902827  0.04143069  0.0492903   0.00546043\n",
+      "  -0.07880909 -0.04929796  0.04978113 -0.01860635 -0.04680577  0.02326846\n",
+      "  -0.02211912  0.04241602 -0.05195818  0.04204397  0.08039538  0.01669751\n",
+      "   0.01431298  0.01247855  0.00818534 -0.03677214  0.02853741  0.03333968\n",
+      "  -0.03557438 -0.06331643  0.02041701 -0.05382596 -0.07443587  0.03599976\n",
+      "  -0.02287997 -0.02194352  0.02270694  0.00253991  0.02189825 -0.04916281\n",
+      "  -0.03079832 -0.05649495 -0.01655334 -0.01198303 -0.05321699  0.01676976\n",
+      "  -0.0673033  -0.0811203   0.07350467  0.06303971  0.02901043 -0.05026489\n",
+      "  -0.07762023 -0.05059215]], shape=(1, 512), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence_vector = universal_sentence_encoder([sentence])\n",
+    "print(sentence_vector)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The standard shape for any vector representation is 512."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 512)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sentence_vector.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Compute sentence similarity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. BioSentVec"
    ]
   },
   {
@@ -389,7 +589,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Test Dataset "
+    "#### 2. Universal Sentence Encoder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compute the sentence similarity between the same sentence pairs using the Universal Sentence Encoder model. Apply the model to each sentence, to get vector representations of the individual sentences, then compute the inner product of the two vectors to determine the similarity."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Similarity: 0.9569721\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence_vector1 = universal_sentence_encoder([preprocess_sentence('Breast cancers with HER2 amplification have a higher risk of CNS metastasis and poorer prognosis.')])\n",
+    "sentence_vector2 = universal_sentence_encoder([preprocess_sentence('Breast cancers with HER2 amplification are more aggressive, have a higher risk of CNS metastasis, and poorer prognosis.')])\n",
+    "sim = np.inner(sentence_vector1, sentence_vector2)[0][0]\n",
+    "print('Similarity:', sim)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is the less similar pair:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Similarity: 0.5786929\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence_vector3 = universal_sentence_encoder([preprocess_sentence('Furthermore, increased CREB expression in breast tumors is associated with poor prognosis, shorter survival and higher risk of metastasis.')])\n",
+    "sim = np.inner(sentence_vector1, sentence_vector3)[0][0]\n",
+    "print('Similarity:', sim)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Test Dataset "
    ]
   },
   {
@@ -542,6 +802,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 3. Universal Sentence Encoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Universal Sentence Encoder similarity score: 0.36970225\n"
+     ]
+    }
+   ],
+   "source": [
+    "import docx\n",
+    "import numpy as np\n",
+    "\n",
+    "doc = docx.Document('../test_data/BIOSSES-Dataset/Annotation-Pairs.docx')\n",
+    "tables = doc.tables\n",
+    "data = []\n",
+    "\n",
+    "keys = None\n",
+    "for i, row in enumerate(tables[0].rows):\n",
+    "    text = (cell.text for cell in row.cells)\n",
+    "\n",
+    "    if i == 0:\n",
+    "        keys = tuple(text)\n",
+    "        continue\n",
+    "\n",
+    "    row_data = dict(zip(keys, text))\n",
+    "    data.append(row_data)\n",
+    "sent_encoder_similarity_list = []\n",
+    "for sentMap in data:\n",
+    "    sentence_vector1 = universal_sentence_encoder([preprocess_sentence(sentMap['Sentence 1'])])\n",
+    "    sentence_vector2 = universal_sentence_encoder([preprocess_sentence(sentMap['Sentence 2'])])\n",
+    "    sim = np.inner(sentence_vector1, sentence_vector2)\n",
+    "    sent_encoder_similarity_list.append(sim)\n",
+    "similarity_score = np.mean(sent_encoder_similarity_list)\n",
+    "print('Universal Sentence Encoder similarity score:', similarity_score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2. MayoSRS Test Dataset "
    ]
   },
@@ -639,6 +947,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 3. Universal Sentence Encoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Universal Sentence Encoder similarity score: 0.32283983\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "file = open('../test_data/MayoSRS.csv')\n",
+    "csvreader = csv.reader(file)\n",
+    "sent_encoder_similarity_list = []\n",
+    "\n",
+    "for row in csvreader:\n",
+    "    sentence_vector1 = universal_sentence_encoder([preprocess_sentence(row[3])])\n",
+    "    sentence_vector2 = universal_sentence_encoder([preprocess_sentence(row[4])])\n",
+    "    sim = np.inner(sentence_vector1, sentence_vector2)[0][0]\n",
+    "    sent_encoder_similarity_list.append(sim)\n",
+    "file.close()\n",
+    "similarity_score = np.mean(sent_encoder_similarity_list)\n",
+    "print('Universal Sentence Encoder similarity score:', similarity_score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3. UMNSRS_similarity Test Dataset "
    ]
   },
@@ -723,11 +1068,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### 3. Universal Sentence Encoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Universal Sentence Encoder similarity score: 0.3192265\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "file = open('../test_data/UMNSRS_similarity.csv')\n",
+    "csvreader = csv.reader(file)\n",
+    "sent_encoder_similarity_list = []\n",
+    "\n",
+    "for row in csvreader:\n",
+    "    sentence_vector1 = universal_sentence_encoder([preprocess_sentence(row[2])])\n",
+    "    sentence_vector2 = universal_sentence_encoder([preprocess_sentence(row[3])])\n",
+    "    sim = np.inner(sentence_vector1, sentence_vector2)[0][0]\n",
+    "    sent_encoder_similarity_list.append(sim)\n",
+    "file.close()\n",
+    "similarity_score = np.mean(sent_encoder_similarity_list)\n",
+    "print('Universal Sentence Encoder similarity score:', similarity_score)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -755,7 +1130,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -769,7 +1144,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "6fd1cfc5a787f1ff6635659d3012a72d7cc12b3dd68a70b94b92aa3c71b7fa69"
+   }
   }
  },
  "nbformat": 4,
